changed the name attribute

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <label for="bookingid">Enter your Booking ID</label>
         <!-- Replace 00NXXXXXXXXXXXXXXX with your Booking_ID__c field ID -->
-        <input type="text" name="00NXXXXXXXXXXXXXXX" required />
+        <input type="text" name="0001" required />
 
         <label for="subject">Subject</label>
         <input type="text" name="subject" required />
