changed the name attribute

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
         <input type="hidden" name="retURL" value="https://google.com/" />
         <input type="hidden" name="origin" value="Web" />
 
-        <label for="email">Your Email</label>
-        <input type="email" name="email" required />
+        <label for="Email">Your Email</label>
+        <input type="email" name="Email" required />
 
-        <label for="bookingid">Enter your Booking ID</label>
+        <label for="Booking_ID">Enter your Booking ID</label>
         <!-- Replace 00NXXXXXXXXXXXXXXX with your Booking_ID__c field ID -->
-        <input type="text" name="0001" required />
+        <input type="text" name="Booking_ID" required />
 
         <label for="subject">Subject</label>
         <input type="text" name="subject" required />
