--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <input type="hidden" name="retURL" value="https://google.com/" />
         <input type="hidden" name="origin" value="Web" />
 
-        <label for="Email">Your Email</label>
-        <input type="email" name="Email" required />
+        <label for="email">Your Email</label>
+        <input type="email" name="email" required />
 
         <label for="Booking_ID">Enter your Booking ID</label>
         <!-- Replace 00NXXXXXXXXXXXXXXX with your Booking_ID__c field ID -->
