--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <label for="subject">Subject</label>
         <input type="text" name="subject" required />
 
-        <label for="Internal Comments">Internal Comments</label>
-        <textarea name="Internal Comments" rows="2" required></textarea>
+        <label for="Comments">Internal Comments</label>
+        <textarea name="Comments" rows="2" required></textarea>
 
         <label for="description">Complaint Description</label>
         <textarea name="description" rows="5" required></textarea>
