--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
         <label for="email">Your Email</label>
         <input type="email" name="email" required />
 
-        <label for="Booking_ID">Enter your Booking ID</label>
-        <!-- Replace 00NXXXXXXXXXXXXXXX with your Booking_ID__c field ID -->
-        <input type="text" name="Booking_ID" required />
+        <label for="Booking_ID__c">Enter your Booking ID</label>
+        <input type="text" name="Booking_ID__c" required />
 
         <label for="subject">Subject</label>
         <input type="text" name="subject" required />
