--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         <label for="subject">Subject</label>
         <input type="text" name="subject" required />
 
+        
+        <label for="	Feedback__c">Feedback</label>
+        <textarea name="	Feedback__c" rows="5" required></textarea>
+
         <label for="description">Complaint Description</label>
         <textarea name="description" rows="5" required></textarea>
 
