--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <input type="hidden" name="retURL" value="https://google.com/" />
         <input type="hidden" name="origin" value="Web" />
 
+        <label for="email">Enter your Email</label>
+        <input type="text" name="email" required />
+
         <label for="Booking_ID__c">Enter your Booking ID</label>
         <input type="text" name="Booking_ID__c" required />
 
