--- a/index.html
+++ b/index.html
@@ -64,34 +64,52 @@
   <div class="overlay">
     <div class="form-container">
       <h2>Submit a Complaint and Feedback</h2>
-      <form
-        action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8"
-        method="POST"
-      >
-        <!-- Replace with your actual Salesforce Org ID -->
-        <input type="hidden" name="orgid" value="00DgK000002MnkE" />
-        <!-- Optional redirect after submission -->
-        <input type="hidden" name="retURL" value="https://google.com/" />
-        <input type="hidden" name="origin" value="Web" />
+      ...
+<form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
+  <input type="hidden" name="orgid" value="00DgK000002MnkE" />
+  <input type="hidden" name="retURL" value="https://google.com/" />
+  <input type="hidden" name="origin" value="Web" />
 
-        <label for="email">Enter your Email</label>
-        <input type="text" name="email" required />
+  <label for="email">Enter your Email</label>
+  <input type="text" name="email" required />
 
-        <label for="Booking_ID__c">Enter your Booking ID</label>
-        <input type="text" name="Booking_ID__c" required />
+  <label for="Booking_ID__c">Enter your Booking ID</label>
+  <input type="text" name="Booking_ID__c" required />
 
-        <label for="subject">Subject</label>
-        <input type="text" name="subject" required />
+  <label for="subject">Subject</label>
+  <input type="text" name="subject" required />
 
-        
-        <label for="Feedback__c">Feedback</label>
-        <textarea name="Feedback__c" rows="5" required></textarea>
+  <label for="Feedback__c">Feedback</label>
+  <textarea name="Feedback__c" rows="5" required></textarea>
 
-        <label for="description">Complaint Description</label>
-        <textarea name="description" rows="5" required></textarea>
+  <label for="description">Complaint Description</label>
+  <textarea name="description" rows="5" required></textarea>
 
-        <button type="submit">Submit</button>
-      </form>
+  <button type="submit">Submit</button>
+</form>
+
+<script>
+  function getParameterByName(name) {
+    const url = window.location.href;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    const regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)");
+    const results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+  }
+
+  document.addEventListener("DOMContentLoaded", function() {
+    const bookingId = getParameterByName('bookingId');
+    if (bookingId) {
+      const bookingIdInput = document.querySelector('input[name="Booking_ID__c"]');
+      if (bookingIdInput) {
+        bookingIdInput.value = bookingId;
+      }
+    }
+  });
+</script>
+
     </div>
   </div>
 </body>
